fix burger menu size on mobile

--- a/src/shared-components/Header/BurgerMenu/BurgerMenu.css
+++ b/src/shared-components/Header/BurgerMenu/BurgerMenu.css
@@ -1,6 +1,6 @@
 .burger-menu-comp > svg {
-  height: min-content !important;
-  width: min-content !important;
+  height: 50px !important;
+  width: 50px !important;
   position: relative;
   z-index: 1;
 }
